Remove the href on the disabled buttons

--- a/comicsdb/templates/comicsdb/character_detail.html
+++ b/comicsdb/templates/comicsdb/character_detail.html
@@ -52,7 +52,7 @@
       </p>
     {% else %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'character:create' %}" title="Add a new character" disabled>New</a>
+        <a class="button is-primary" title="Add a new character" disabled>New</a>
       </p>
       <p class="level-item">
         <a class="button is-info" title="Edit character" disabled>Edit</a>
