--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -52,7 +52,7 @@
       </p>
     {% else %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'creator:create' %}" title="Add a new creator" disabled>New</a>
+        <a class="button is-primary" title="Add a new creator" disabled>New</a>
       </p>
       <p class="level-item">
         <a class="button is-info" title="Edit creator" disabled>Edit</a>
