--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -55,10 +55,10 @@
       </p>
       {% else %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue" disabled>New</a>
+        <a class="button is-primary" title="Add a new issue" disabled>New</a>
       </p>
       <p class="level-item">
-        <a class="button is-warning" href="{% url 'issue:variant' issue.slug %}" title="Add variant cover" disabled>Add Variant Cover</a>
+        <a class="button is-warning" title="Add variant cover" disabled>Add Variant Cover</a>
       </p>
       <p class="level-item">
         <a class="button is-info" title="Edit Issue" disabled>Edit</a>
