--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -57,7 +57,7 @@
       </p>
       {% else %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series" disabled>New</a>
+        <a class="button is-primary" title="Add a new series" disabled>New</a>
       </p>
       <p class="level-item">
         <a class="button is-info" title="Edit Series" disabled>Edit</a>
