--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -52,7 +52,7 @@
       </p>
     {% else %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'arc:create' %}" title="Add a new story arc" disabled>New</a>
+        <a class="button is-primary" title="Add a new story arc" disabled>New</a>
       </p>
       <p class="level-item">
         <a class="button is-info" title="Edit arc" disabled>Edit</a>
