--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -55,7 +55,7 @@
       </p>
       {% else %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher" disabled>New</a>
+        <a class="button is-primary" title="Add a new publisher" disabled>New</a>
       </p>
       <p class="level-item">
         <a class="button is-primary" title="Edit publisher" disabled>Edit</a>
