--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -52,7 +52,7 @@
       </p>
     {% else %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team" disabled>New</a>
+        <a class="button is-primary" title="Add a new team" disabled>New</a>
       </p>
       <p class="level-item">
         <a class="button is-info" title="Edit team" disabled>Edit</a>
