Minor change to homepage text.

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -43,7 +43,7 @@
             <h1 class="title is-5">Want to join?</h1>
             <h2 class="subtitle is-6">
               Currently, the site is under heavy construction but I'll be opening up registration and adding some
-              documentation fairly soon.
+              documentation fairly soon. If you have any questions, please <a href="{% url 'contact:email' %}">contact</a> me.
             </h2>
           </div>
           <!-- end info box -->
