Create thumbnails in webp format

--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -72,7 +72,7 @@
       <div class="box">
         <figure class="image is-2by3">
           {% if arc.image %}
-            {% thumbnail arc.image "320x480" crop="center" as im %}
+            {% thumbnail arc.image "320x480" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt = "{{ arc.name }}">
             {% endthumbnail %}
           {% else %}
