--- a/comicsdb/templates/comicsdb/character_list.html
+++ b/comicsdb/templates/comicsdb/character_list.html
@@ -46,7 +46,7 @@
         <a href="{% url 'character:detail' character.slug %}">
           <figure class="image is-2by3">
           {% if character.image %}
-            {% thumbnail character.image "320x480" crop="center" as im %}
+            {% thumbnail character.image "320x480" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt="{{ character.name }}">
             {% endthumbnail %}
           {% else %}
