--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -72,7 +72,7 @@
       <div class="box">
         <figure class="image is-square">
           {% if creator.image %}
-            {% thumbnail creator.image "256x256" crop="center" as im %}
+            {% thumbnail creator.image "256x256" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt = "{{ creator.name }}">
             {% endthumbnail %}
           {% else %}
