--- a/comicsdb/templates/comicsdb/arc_list.html
+++ b/comicsdb/templates/comicsdb/arc_list.html
@@ -46,7 +46,7 @@
         <a href="{% url 'arc:detail' arc.slug %}">
           <figure class="image is-2by3">
           {% if arc.image %}
-            {% thumbnail arc.image "320x480" crop="center" as im %}
+            {% thumbnail arc.image "320x480" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt="{{ arc.name }}">
             {% endthumbnail %}
           {% else %}
