--- a/comicsdb/templates/comicsdb/character_detail.html
+++ b/comicsdb/templates/comicsdb/character_detail.html
@@ -72,7 +72,7 @@
       <div class="box">
         <figure class="image is-2by3">
           {% if character.image %}
-            {% thumbnail character.image "320x480" crop="center" as im %}
+            {% thumbnail character.image "320x480" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt = "{{ character.name }}">
             {% endthumbnail %}
           {% else %}
