--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -75,7 +75,7 @@
       <div class="box">
         <figure class="image is-2by3">
           {% if publisher.image %}
-            {% thumbnail publisher.image "320x480" crop="center" as im %}
+            {% thumbnail publisher.image "320x480" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt = "{{ publisher.name }}">
             {% endthumbnail %}
           {% else %}
