--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -77,7 +77,7 @@
       <div class="box">
         <figure class="image is-2by3">
           {% if series.issue_set.first.image %}
-            {% thumbnail series.issue_set.first.image "320x480" crop="center" as im %}
+            {% thumbnail series.issue_set.first.image "320x480" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt = "{{ series }}">
             {% endthumbnail %}
           {% else %}
