--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -72,7 +72,7 @@
       <div class="box">
         <figure class="image is-2by3">
           {% if team.image %}
-            {% thumbnail team.image "320x480" crop="center" as im %}
+            {% thumbnail team.image "320x480" crop="center" format="WEBP" as im %}
               <img src="{{ im.url }}" alt = "{{ team.name }}">
             {% endthumbnail %}
           {% else %}
@@ -122,7 +122,7 @@
                   <article class="media">
                     <div class="media-left">
                       <figure class="image is-64x64">
-                      {% thumbnail character.image "64x64" crop="center" as im %}
+                      {% thumbnail character.image "64x64" crop="center" format="WEBP" as im %}
                         <img src="{{ im.url }}" alt="{{ character }}">
                       {% endthumbnail %}
                       </figure>
