--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="{% url 'home' %}">
-          <img src="{% static 'site/img/atomic-symbol.png' %}" width="24" height="24">
+          <img src="{% static 'site/img/atomic-symbol.png' %}" width="24" height="24" alt="Logo">
         </a>
         <span class="navbar-burger burger" data-target="navMenu">
           <span></span>
