--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -76,13 +76,15 @@
     <div class="column is-one-fifth">
       <div class="box">
         <figure class="image is-2by3">
-          {% if series.issue_set.first.image %}
-            {% thumbnail series.issue_set.first.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" alt = "{{ series }}">
-            {% endthumbnail %}
-          {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ series }}">
-          {% endif %}
+          {% with cover=series.first_issue_cover %}
+            {% if cover %}
+              {% thumbnail cover "320x480" crop="center" format="WEBP" as im %}
+                <img src="{{ im.url }}" alt = "{{ series }}">
+              {% endthumbnail %}
+            {% else %}
+              <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ series }}">
+            {% endif %}
+          {% endwith %}
         </figure>
       </div>
     </div>
