Add meta info to home template

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -3,6 +3,8 @@
 {% load humanize %}
 {% load static %}
 
+{% block sitedesc %}<meta name="description" content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">{% endblock %}
+{% block sitekeywords %}<meta name="keywords" content="Comics,Comic Book Database,API,REST">{% endblock %}
 {% block title %}Metron{% endblock %}
 
 {% block content %}
