--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -47,19 +47,15 @@
       <p class="level-item">
         <a class="button is-info" href="{% url 'arc:update' arc.slug %}" title="Edit arc">Edit</a>
       </p>
+      {% if perms.comicsdb.can_delete %}
       <p class="level-item">
         <a class="button is-danger" href="{% url 'arc:delete' arc.slug %}" title="Delete arc">Delete</a>
       </p>
-    {% else %}
-      <p class="level-item">
-        <a class="button is-primary" title="Add a new story arc" disabled>New</a>
-      </p>
-      <p class="level-item">
-        <a class="button is-info" title="Edit arc" disabled>Edit</a>
-      </p>
+      {% else %}
       <p class="level-item">
         <a class="button is-danger" title="Delete arc" disabled>Delete</a>
-      </p>
+      </p>      
+      {% endif %}
     {% endif %}
     </div>
   </nav>
